--- a/active_learning.ipynb
+++ b/active_learning.ipynb
@@ -80,6 +80,28 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc94375a-19cc-41e4-a7c7-c4a452e600ef",
+   "metadata": {},
+   "source": [
+    "## PyTorch ressources\n",
+    "\n",
+    "* https://github.com/rmunro/pytorch_active_learning\n",
+    "* https://blog.scaleway.com/active-learning-pytorch/\n",
+    "* https://devblog.pytorchlightning.ai/active-learning-made-simple-using-flash-and-baal-2216df6f872c\n",
+    "* https://github.com/acl21/deep-active-learning-pytorch\n",
+    "* https://medium.com/scaleway-cloud/active-learning-with-pytorch-dc6805956b0f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82fe8291-18bd-47f5-bdd5-6bc9adf7a898",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
