--- a/active_learning.ipynb
+++ b/active_learning.ipynb
@@ -27,14 +27,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e5c4c68a-d64b-47bc-9e9c-099b3cb650b7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "a93e1767-48c6-428e-b298-0688c8d9b9e5",
    "metadata": {},
@@ -47,16 +39,10 @@
     "\n",
     "http://nextml.org/  \n",
     "https://github.com/nextml/next/  \n",
-    "https://www.youtube.com/watch?v=rTyu4QTXZTc  "
+    "https://www.youtube.com/watch?v=rTyu4QTXZTc  \n",
+    "\n",
+    "<div class=\"alert alert-danger\">Is implemented in Python 2, so it's out of the question.</div>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "52302075-25d3-4887-a3b8-49353c556b69",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -120,7 +106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
