--- a/active_learning.ipynb
+++ b/active_learning.ipynb
@@ -27,39 +27,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "a93e1767-48c6-428e-b298-0688c8d9b9e5",
-   "metadata": {},
-   "source": [
-    "## nextml ...\n",
-    "... is a system that makes active learning easy to\n",
-    "* develop\n",
-    "* evaluate\n",
-    "* apply\n",
-    "\n",
-    "http://nextml.org/  \n",
-    "https://github.com/nextml/next/  \n",
-    "https://www.youtube.com/watch?v=rTyu4QTXZTc  \n",
-    "\n",
-    "<div class=\"alert alert-danger\">Is implemented in Python 2, so it's out of the question.</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "00db4057-5e28-4d59-86ba-84d06c1fc3cb",
-   "metadata": {},
-   "source": [
-    "## superintendent ...\n",
-    "... provides\n",
-    "\n",
-    "* ipywidget-based interactive labelling tool for data\n",
-    "* flexibly labelling all kinds of data\n",
-    "* combining data-labelling task with a statistical or machine learning model\n",
-    "\n",
-    "https://github.com/janfreyberg/superintendent"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "dd8d1f0c-432c-4a28-a780-b6609994ca7a",
@@ -69,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc94375a-19cc-41e4-a7c7-c4a452e600ef",
+   "id": "33f967fe-905d-42aa-80fd-2298878ae86f",
    "metadata": {},
    "source": [
     "## PyTorch ressources\n",
@@ -84,10 +51,53 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82fe8291-18bd-47f5-bdd5-6bc9adf7a898",
+   "id": "146bd7e2-8519-4d20-83ca-322bcfedb3d2",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00db4057-5e28-4d59-86ba-84d06c1fc3cb",
+   "metadata": {},
+   "source": [
+    "## superintendent ...\n",
+    "... provides\n",
+    "\n",
+    "* ipywidget-based interactive labelling tool for data\n",
+    "* flexibly labelling all kinds of data\n",
+    "* combining data-labelling task with a statistical or machine learning model\n",
+    "\n",
+    "https://github.com/janfreyberg/superintendent\n",
+    "\n",
+    "<div class=\"alert-warning alert\">Looks not very up-to-date. Active learning via Voila-Dashboard is no stable solution. But superintendent might be interesting for practicing active learning.</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ba78614-76aa-4fef-bc98-7a68220ccae7",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67daab31-457c-4d64-a7e0-adea8f91351b",
+   "metadata": {},
+   "source": [
+    "## NEXT ...\n",
+    "... is a system that makes active learning easy to\n",
+    "* develop\n",
+    "* evaluate\n",
+    "* apply\n",
+    "\n",
+    "http://nextml.org/  \n",
+    "https://github.com/nextml/next/  \n",
+    "https://www.youtube.com/watch?v=rTyu4QTXZTc  \n",
+    "\n",
+    "<div class=\"alert alert-danger\">Is implemented in Python 2, so it's out of the question.</div>"
+   ]
   }
  ],
  "metadata": {
