--- a/active_learning.ipynb
+++ b/active_learning.ipynb
@@ -12,6 +12,59 @@
   },
   {
    "cell_type": "markdown",
+   "id": "67d09dc9-20af-45af-881d-688608ccbfbb",
+   "metadata": {},
+   "source": [
+    "## pytorch_active_learning\n",
+    "https://github.com/rmunro/pytorch_active_learning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e98b88a-7531-4339-baa8-56e3e15cc0fa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a32ad29c-2075-4916-bbac-4e7efcdde9d5",
+   "metadata": {},
+   "source": [
+    "## deep-active-learning-pytorch\n",
+    "https://github.com/acl21/deep-active-learning-pytorch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e402e9e8-817c-4882-8510-a28669053a1b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f7b5724-aa59-42fe-b238-d757e5500fa0",
+   "metadata": {},
+   "source": [
+    "## other PyTorch ressources\n",
+    "* https://blog.scaleway.com/active-learning-pytorch/\n",
+    "* https://devblog.pytorchlightning.ai/active-learning-made-simple-using-flash-and-baal-2216df6f872c\n",
+    "* https://medium.com/scaleway-cloud/active-learning-with-pytorch-dc6805956b0f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b3bd8ce-be5b-4503-9067-3a1e50251695",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "446027af-c7a4-4ad5-a437-b43643ead5c0",
    "metadata": {},
    "source": [
@@ -23,29 +76,9 @@
     "* dataset curation\n",
     "\n",
     "https://psiz.org/  \n",
-    "https://github.com/roads/psiz"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dd8d1f0c-432c-4a28-a780-b6609994ca7a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "33f967fe-905d-42aa-80fd-2298878ae86f",
-   "metadata": {},
-   "source": [
-    "## PyTorch ressources\n",
+    "https://github.com/roads/psiz\n",
     "\n",
-    "* https://github.com/rmunro/pytorch_active_learning\n",
-    "* https://blog.scaleway.com/active-learning-pytorch/\n",
-    "* https://devblog.pytorchlightning.ai/active-learning-made-simple-using-flash-and-baal-2216df6f872c\n",
-    "* https://github.com/acl21/deep-active-learning-pytorch\n",
-    "* https://medium.com/scaleway-cloud/active-learning-with-pytorch-dc6805956b0f"
+    "<div class=\"alert-info alert\">Uses tensorflow</div>"
    ]
   },
   {
@@ -96,7 +129,7 @@
     "https://github.com/nextml/next/  \n",
     "https://www.youtube.com/watch?v=rTyu4QTXZTc  \n",
     "\n",
-    "<div class=\"alert alert-danger\">Is implemented in Python 2, so it's out of the question.</div>"
+    "<div class=\"alert alert-danger\">Implemented in Python 2.</div>"
    ]
   }
  ],
