--- a/active_learning.ipynb
+++ b/active_learning.ipynb
@@ -49,7 +49,7 @@
    "id": "1f7b5724-aa59-42fe-b238-d757e5500fa0",
    "metadata": {},
    "source": [
-    "## other PyTorch ressources\n",
+    "## other PyTorch resources\n",
     "* https://blog.scaleway.com/active-learning-pytorch/\n",
     "* https://devblog.pytorchlightning.ai/active-learning-made-simple-using-flash-and-baal-2216df6f872c\n",
     "* https://medium.com/scaleway-cloud/active-learning-with-pytorch-dc6805956b0f"
